--- a/assignment-6.html
+++ b/assignment-6.html
@@ -21,6 +21,9 @@
             background-color: rgba(128, 75, 75, 0.192);
             text-align: center;
         }
+        .list-data{
+            /* display: none; */
+        }
     </style>
 </head>
 <body>
@@ -34,5 +37,8 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="assignment-6.js"></script>
+
+
+<!-- <script src="assignment-6.js"></script> -->
+<script src="try.js"></script>
 </html>
